# docfiler

./: README.md  pyproject.toml
src/docfiler/: ai.py  cli.py  config.py  filing.py  ocr.py  triage.py  utils.py
